fixed clipping on browser edge

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,10 @@ body {
   background-color: white;
   width: 100%;
   color: black;
-  padding-bottom: 5px;
-  padding-top: 5px;
+}
+
+#content {
+  padding: 0 10px;
 }
 
 #content a {
